WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58595
Menu is not displayed for <input type=search results="5">
https://bugs.webkit.org/show_bug.cgi?id=58595
Summary
Menu is not displayed for <input type=search results="5">
Brady Eidson
Reported
2011-04-14 16:01:07 PDT
Menu is not displayed for <input type=search results="5"> The primary cause of the menu not even displaying is the WebSearchPopupMenu returned "false" for enabled. That's a 1-liner. I also included Mac-only code to get the Mac position correct. Note that my planned fix for this won't actually implement setting/restoring the past searches - that's a logically separate task I'll track with another bug. In radar as <
rdar://problem/8665102
>
Attachments
Patch v1
(5.53 KB, patch)
2011-04-14 16:05 PDT
,
Brady Eidson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2011-04-14 16:02:55 PDT
Adding the results memory is tracked in
https://bugs.webkit.org/show_bug.cgi?id=58596
Brady Eidson
Comment 2
2011-04-14 16:05:29 PDT
Created
attachment 89678
[details]
Patch v1
Brady Eidson
Comment 3
2011-04-14 16:13:43 PDT
r83909
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug