<rdar://problem/8665102> and https://bugs.webkit.org/show_bug.cgi?id=58595 Menu is not displayed for <input type=search results="5">

Reviewed by Sam Weinig.

* WebProcess/WebCoreSupport/WebSearchPopupMenu.cpp:
(WebKit::WebSearchPopupMenu::enabled): Return true, like all good search popup menus should.

* WebProcess/WebCoreSupport/mac/WebPopupMenuMac.mm:
(WebKit::WebPopupMenu::setUpPlatformData): Remember the shouldPopOver-ness.

* Shared/PlatformPopupMenuData.cpp:
(WebKit::PlatformPopupMenuData::encode): Remember the shouldPopOver-ness.
(WebKit::PlatformPopupMenuData::decode): Remember the shouldPopOver-ness.
* Shared/PlatformPopupMenuData.h:

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::showPopupMenu): Use the shouldPopOver-ness to adjust display position.



Canonical link: https://commits.webkit.org/73663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83909 268f45cc-cd09-0410-ab3c-d52691b4dbfc